# TNN_Demo_UltraFace_Android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lk/tnndemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lk/tnndemo/: CameraDetectFragment.kt  DetectBitmapFragment.kt  DetectFaceAnalyzer.kt  MainActivity.kt  UltraFace.kt  Utils.kt
app/src/main/jni/: UltraFace.cpp  UltraFace.h  demo_jni.cpp  helper_jni.cc  helper_jni.h
app/src/main/res/layout/: activity_main.xml  fragment_camera_detect.xml  fragment_detect_bitmap.xml
app/src/main/res/menu/: bottom_menu_nav.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lk/tnndemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
